Boards added in HTML

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<!-- <link rel="stylesheet" href="css/style.css"/> -->
-</head>
-<body>
-
-  
-
-
-<!-- Подключаем ЯВАСКРИПТ =======================================================-->
-	<script src="js/script.js"></script>
-<!-- Подключаем ЯВАСКРИПТ =======================================================-->
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="stylesheet" href="css/style.css" />
+        <script src="js/boards.js" defer></script>
+        <script src="js/script.js" defer></script>
+    </head>
+    <body>
+        <div class="game">
+            <div class="game__header">Заголовок</div>
+            <div class="game__container">
+                <div class="board"></div>
+                <div class="board"></div>
+            </div>
+        </div>
+    </body>
 </html>
